--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@discordjs/rest": "^1.0.0",
     "discord-api-types": "^0.36.2",
     "discord.js": "^13.8.1",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "undici": "^5.8.0"
   }
 }
